--- a/style.css
+++ b/style.css
@@ -1,3 +1,14 @@
+@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+/* brandico */
+/* fontawesome */
+[class*="fontawesome-"]:before {
+  font-family: 'FontAwesome', sans-serif;
+  margin: 0.42em;
+  font-size: 1.14em;
+  font-weight: normal;
+}
+
+
 html, body {
   margin: 0;
 }
@@ -69,4 +80,10 @@ footer {
 }
 .i:hover {
   cursor: pointer;
+}
+#socials {
+  width: 100%;
+  height: 3em;
+  display: flex;
+  justify-content: flex-end;
 }
