--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ img {
 }
 .end {
   text-align: right;
-  font-size: 1.4em;
+  font-size: 1.2em;
   line-height: 3em;
 }
 footer {
@@ -77,6 +77,8 @@ footer {
   font-weight: 100;
   text-align: center;
   line-height: 2em;
+    font-family: 'Ubuntu', sans-serif;
+
 }
 .i:hover {
   cursor: pointer;
